src/objects/KS_Factura__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto para volcar las facturas de clientes provinientes de SAP</description>
    <fields>
        <fullName>KS_Canal_de_distribucion__c</fullName>
        <label>Canal de distribución</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Canal_de_distribucion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Clase_de_factura__c</fullName>
        <label>Clase de factura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clase_de_factura</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Clave_de_condiciones_de_pago__c</fullName>
        <label>Clave de condiciones de pago</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                </value>
                <value>
                    <fullName>0004</fullName>
                </value>
                <value>
                    <fullName>B001</fullName>
                </value>
                <value>
                    <fullName>B002</fullName>
                </value>
                <value>
                    <fullName>B003</fullName>
                </value>
                <value>
                    <fullName>B004</fullName>
                </value>
                <value>
                    <fullName>B005</fullName>
                </value>
                <value>
                    <fullName>B006</fullName>
                </value>
                <value>
                    <fullName>B007</fullName>
                </value>
                <value>
                    <fullName>B008</fullName>
                </value>
                <value>
                    <fullName>B009</fullName>
                </value>
                <value>
                    <fullName>B010</fullName>
                </value>
                <value>
                    <fullName>B011</fullName>
                </value>
                <value>
                    <fullName>B012</fullName>
                </value>
                <value>
                    <fullName>B013</fullName>
                </value>
                <value>
                    <fullName>B014</fullName>
                </value>
                <value>
                    <fullName>B015</fullName>
                </value>
                <value>
                    <fullName>B016</fullName>
                </value>
                <value>
                    <fullName>B017</fullName>
                </value>
                <value>
                    <fullName>B018</fullName>
                </value>
                <value>
                    <fullName>B019</fullName>
                </value>
                <value>
                    <fullName>B020</fullName>
                </value>
                <value>
                    <fullName>B021</fullName>
                </value>
                <value>
                    <fullName>B022</fullName>
                </value>
                <value>
                    <fullName>B023</fullName>
                </value>
                <value>
                    <fullName>B024</fullName>
                </value>
                <value>
                    <fullName>B025</fullName>
                </value>
                <value>
                    <fullName>B026</fullName>
                </value>
                <value>
                    <fullName>B027</fullName>
                </value>
                <value>
                    <fullName>B028</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Comisionista__c</fullName>
        <label>Comisionista</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Dest_Factura__c</fullName>
        <label>Dest. Factura</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Destinatario__c</fullName>
        <label>Destinatario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Dias_valor_adicionales__c</fullName>
        <label>Días valor adicionales</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Ejercicio__c</fullName>
        <label>Ejercicio</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Estado_de_factura</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Factura_esta_anulada__c</fullName>
        <label>Factura está anulada</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_creacion_del_registro__c</fullName>
        <label>Fecha de creación del registro</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_factura_para_el_indice__c</fullName>
        <label>Fecha de factura para el índice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_valor__c</fullName>
        <label>Fecha de valor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Hora_registrada__c</fullName>
        <label>Hora registrada</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Incoterms_parte_1__c</fullName>
        <label>Incoterms parte 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Incoterms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Incoterms_parte_2__c</fullName>
        <label>Incoterms parte 2</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ind_fijacion_tipo_cambio_sin_determ__c</fullName>
        <label>Ind.fijación tipo cambio (sin determ.cam</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Indicador_de_exportacion__c</fullName>
        <label>Indicador de exportación</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_del_responsable__c</fullName>
        <label>Nombre del responsable</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Numero_Factura__c</fullName>
        <externalId>true</externalId>
        <label>Numero Factura</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Numero_Personal__c</fullName>
        <label>Número Personal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_de_ventas__c</fullName>
        <label>Organización de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Periodo_contable__c</fullName>
        <label>Período contable</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Pago__c</fullName>
        <label>Resp. Pago</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Sociedad__c</fullName>
        <label>Sociedad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Sociedad</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Solicitante__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitante</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Facturas</relationshipLabel>
        <relationshipName>Facturas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Status_para_la_transferencia_a_contab__c</fullName>
        <label>Status para la transf. a contabilidad</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_cambio_de_moneda_para_conta__c</fullName>
        <label>Tipo de cambio de moneda para conta</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_documento_comercial__c</fullName>
        <label>Tipo de documento comercial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Valor_neto_en_moneda_de_documento__c</fullName>
        <label>Valor neto en moneda de documento</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Vendedor__c</fullName>
        <label>Vendedor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Via_de_pago__c</fullName>
        <label>Vía de pago</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Via_de_pago</valueSetName>
        </valueSet>
    </fields>
    <label>Factura</label>
    <nameField>
        <label>Factura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>